feat: add API to fetch all apartments by building.id
